# src/TimeForCode.Authorization.Application/Interfaces/GetAccountInformationModel.cs
@@ -1,7 +1,0 @@
-﻿namespace TimeForCode.Authorization.Application.Interfaces
-{
-    public class GetAccountInformationModel
-    {
-        public required string AccessToken { get; init; }
-    }
-}
