# src/TimeForCode.Authorization.Application/Interfaces/IIdentityProviderService.cs
@@ -1,5 +1,6 @@
 ﻿using Microsoft.IdentityModel.Tokens;
 using TimeForCode.Authorization.Commands;
+using TimeForCode.Authorization.Domain;
 using TimeForCode.Authorization.Domain.Entities;
 
 namespace TimeForCode.Authorization.Application.Interfaces
@@ -7,7 +8,7 @@ namespace TimeForCode.Authorization.Application.Interfaces
     public interface IIdentityProviderService
     {
         Task<Result<GetAccessTokenResult>> GetAccessTokenAsync(string code);
-        Task<Result<AccountInformation>> GetAccountInformation(GetAccountInformationModel model);
+        Task<Result<AccountInformation>> GetAccountInformation(AccessToken model);
         Task<TokenValidationParameters> GetTokenValidationParameters();
     }
 }
