# src/TimeForCode.Authorization.Domain/Entities/RefreshToken.cs
@@ -1,12 +1,11 @@
-﻿using MongoDB.Bson;
-
-namespace TimeForCode.Authorization.Domain.Entities
+﻿namespace TimeForCode.Authorization.Domain.Entities
 {
     public class RefreshToken : DocumentEntity
     {
         public required string Token { get; init; }
-        public required DateTimeOffset ExpiresAfter { get; init; }
+        public required DateTimeOffset ExpiresAfter { get; set; }
 
         public bool IsExpired(DateTimeOffset referenceDateTime) => referenceDateTime > ExpiresAfter;
+        public bool SetExpiresAfter(DateTimeOffset newExpiryDateTime) => ExpiresAfter > newExpiryDateTime;
     }
 }
